# agentic-qa-platform

./: .agent_state.json  .env.example  CLAUDE.md  LLM_MODELS.md  README.md  agentic-qa-platform-plan.md  conftest.py  docker-compose.yml  pyproject.toml  risk_config.yml
.claude/: settings.json
.claude/skills/: implement.md  plan.md
.claude/skills-lib/: get_day_prompt.py  get_status.py  parse_plan.py  update_status.py
docs/: architecture.md  demo_level2.md
docs/adr/: ADR-001-openrouter-model-selection.md  ADR-002-pytest-over-unittest.md  ADR-003-saleor-as-system-under-test.md
generated_tests/api/: test_checkout_complete_creates_order_or_requires_confirmation.py  test_checkout_complete_creates_order_without_confirmation.py  test_checkout_create.py  test_checkout_create_basic.py  test_checkout_create_success.py  test_draft_order_bulk_delete.py  test_draft_order_create.py  test_draft_order_update.py  test_order_grant_refund_create.py  test_order_line_delete.py  test_stored_payment_method_request_delete.py
reports/: agent_run_report.json  generation_report.json  latest.html  latest.json
scripts/: get_day_prompt.py  health_check.py  parse_plan.py
tests/: test_agent_core.py  test_api_test_generator.py  test_coverage_analyzer.py  test_diff_analyzer.py  test_e2e_agent.py  test_escalation_manager.py  test_failure_classifier.py  test_generate_command.py  test_integration_test_generator.py  test_page_context_extractor.py  test_pytest_runner.py  test_report_generator.py  test_risk_scorer.py  test_schema_analyzer.py  test_self_healer.py  test_ui_test_generator.py
(+26 files in other folders)
